# data-manager-python

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.rst  noxfile.py  pyproject.toml
google/ads/datamanager_util/: __init__.py  encrypt.py  format.py
samples/audiences/: ingest_audience_members.py
samples/events/: ingest_events.py
samples/sampledata/: audience_members_1.csv  events_1.json
tests/: formatter_test.py
