# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads-data-manager-util"
version = "0.2.0"
description = "Utilities for the Data Manager API"
readme = "./README.rst"
requires-python = ">=3.9, <3.14"
license = {text = "Apache 2.0"}
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PyYAML >= 5.1, < 7.0",
    "tink ~= 1.11",
    "tink[gcpkms] ~= 1.11",
    "typing_extensions",
]

[project.optional-dependencies]
dev = [
    "black",
    "nox >= 2020.12.31, < 2022.6",
    # Include the dependencies for samples for convenience, since sample updates
    # are often part of the dev process.
    "google-ads-data-manager-util[samples]",
]
samples = [
    "google-ads-datamanager ~= 0.1",
]

[tool.setuptools]
packages = ["google.ads.datamanager_util"]

